(lang dune 3.15)

(name light-http)

(source
 (github lubegasimon/light-http))

; (documentation "https://lubegasimon.github.io/light-http/")

(license MIT)

(authors "Simon Lubega")

(maintainers "Simon Lubega <lubegasimon73@gmail.com>")

(generate_opam_files)

(package
 (name light-http)
 (synopsis "Light HTTP/1.1 implementation")
 (description "Light HTTP/1.1 implementation"))

